centralizando o mapa, adicionando profundidade

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "random": "c",
         "fdf.h": "c",
         "stdio.h": "c",
-        "ft_printf.h": "c"
+        "ft_printf.h": "c",
+        "mlx.h": "c"
     }
 }
