--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,12 @@
         "fdf.h": "c",
         "stdio.h": "c",
         "ft_printf.h": "c",
-        "mlx.h": "c"
+        "mlx.h": "c",
+        "math.h": "c",
+        "array": "c",
+        "string": "c",
+        "string_view": "c",
+        "ranges": "c",
+        "span": "c"
     }
 }
