--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,11 +4,12 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+
         {
             "name": "(gdb) Launch",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/a.out",
+            "program": "${workspaceFolder}/fdf",
             "args": ["./test_maps/42.fdf"],
             "stopAtEntry": false,
             "cwd": "${fileDirname}",
@@ -29,5 +30,7 @@
             ]
         }
 
-    ]
+
+    ],
+
 }
